fix ring-btn_icon vertical align
Former-commit-id: 3378138edbc6a515f5180bd06eaf5478c24374fb

--- a/blocks/btn/_btn.scss
+++ b/blocks/btn/_btn.scss
@@ -219,8 +219,9 @@ $ring-btn-border-radius: 3px;
 }
 
 .ring-btn_icon {
+  position: relative;
+  top: 1px;
   font-size: 13px;
-  line-height: 0;
 }
 
 .ring-btn__last-icon {
